# Advent-of-Code-2022

./: .gitignore  aoc_io.py  pyproject.toml  requirements-dev.txt  requirements.txt  run.py  utils.py
day_01/: analysis.md  solution.py
day_02/: analysis.md  solution.py
day_03/: analysis.md  solution.py
day_04/: analysis.md  solution.py
day_05/: analysis.md  solution.py
day_06/: analysis.md  solution.py
day_07/: analysis.md  solution.py
day_08/: analysis.md  solution.py
day_09/: analysis.md  solution.py
day_10/: analysis.md  solution.py
day_11/: analysis.md  solution.py
day_12/: analysis.md  part_1.py  part_2.py  solution.py  typings.py  utils.py
day_13/: analysis.md  solution.py
day_14/: analysis.md  solution.py  visualization.py
day_15/: analysis.md  solution.py
day_16/: analysis.md  solution.py
day_17/: analysis.md  solution.py
day_18/: analysis.md  solution.py
day_19/: analysis.md  solution.py
day_xx/: solution.py
