[tool.poetry]
name = "advent-of-code-2022"
version = "0.1.0"
description = "My solutions to Advent of Code 2022 https://adventofcode.com/2022"
authors = ["Mushinako <8977737+Mushinako@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "advent_of_code_2022"}]

[tool.poetry.dependencies]
python = "^3.10"
beautifulsoup4 = "^4.11.1"
colorama = "^0.4.6"
requests = "^2.28.1"
PyYAML = "^6.0"

[tool.poetry.group.dev.dependencies]
pip = "^22.3.1"
black = "^22.10.0"
isort = "^5.10.1"
wheel = "^0.38.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
